@@ -1,9 +1,8 @@
 package net.minecraft.client.renderer.block.model.multipart;
 
 import com.google.common.collect.Streams;
-import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import net.minecraft.Util;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.state.BlockState;
 import net.minecraft.world.level.block.state.StateDefinition;
@@ -18,13 +17,8 @@ public class OrCondition implements Condition {
    }
 
    public Predicate<BlockState> getPredicate(StateDefinition<Block, BlockState> var1) {
-      List var2 = (List)Streams.stream(this.conditions).map((var1x) -> {
+      return Util.anyOf(Streams.stream(this.conditions).map((var1x) -> {
          return var1x.getPredicate(var1);
-      }).collect(Collectors.toList());
-      return (var1x) -> {
-         return var2.stream().anyMatch((var1) -> {
-            return var1.test(var1x);
-         });
-      };
+      }).toList());
    }
 }
