@@ -1,6 +1,5 @@
 package net.minecraft.world.level.storage.loot.functions;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
 import com.mojang.serialization.MapCodec;
@@ -15,11 +14,11 @@ import net.minecraft.core.Holder;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.util.ExtraCodecs;
 import net.minecraft.util.RandomSource;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 import net.minecraft.world.level.storage.loot.predicates.LootItemCondition;
 
@@ -41,12 +40,12 @@ public class ApplyBonusCount extends LootItemConditionalFunction {
       return LootItemFunctions.APPLY_BONUS;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.TOOL);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.TOOL);
    }
 
    public ItemStack run(ItemStack var1, LootContext var2) {
-      ItemStack var3 = (ItemStack)var2.getParamOrNull(LootContextParams.TOOL);
+      ItemStack var3 = (ItemStack)var2.getOptionalParameter(LootContextParams.TOOL);
       if (var3 != null) {
          int var4 = EnchantmentHelper.getItemEnchantmentLevel(this.enchantment, var3);
          int var5 = this.formula.calculateNewCount(var2.getRandom(), var1.getCount(), var4);
