@@ -1,6 +1,5 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
@@ -9,11 +8,11 @@ import java.util.List;
 import java.util.Set;
 import net.minecraft.core.Holder;
 import net.minecraft.util.ExtraCodecs;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.enchantment.Enchantment;
 import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public record BonusLevelTableCondition(Holder<Enchantment> enchantment, List<Float> values) implements LootItemCondition {
@@ -31,12 +30,12 @@ public record BonusLevelTableCondition(Holder<Enchantment> enchantment, List<Flo
       return LootItemConditions.TABLE_BONUS;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.TOOL);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.TOOL);
    }
 
    public boolean test(LootContext var1) {
-      ItemStack var2 = (ItemStack)var1.getParamOrNull(LootContextParams.TOOL);
+      ItemStack var2 = (ItemStack)var1.getOptionalParameter(LootContextParams.TOOL);
       int var3 = var2 != null ? EnchantmentHelper.getItemEnchantmentLevel(this.enchantment, var2) : 0;
       float var4 = (Float)this.values.get(Math.min(var3, this.values.size() - 1));
       return var1.getRandom().nextFloat() < var4;
