@@ -1,11 +1,10 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import java.util.Set;
 import net.minecraft.util.RandomSource;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public class ExplosionCondition implements LootItemCondition {
@@ -20,12 +19,12 @@ public class ExplosionCondition implements LootItemCondition {
       return LootItemConditions.SURVIVES_EXPLOSION;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.EXPLOSION_RADIUS);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.EXPLOSION_RADIUS);
    }
 
    public boolean test(LootContext var1) {
-      Float var2 = (Float)var1.getParamOrNull(LootContextParams.EXPLOSION_RADIUS);
+      Float var2 = (Float)var1.getOptionalParameter(LootContextParams.EXPLOSION_RADIUS);
       if (var2 != null) {
          RandomSource var3 = var1.getRandom();
          float var4 = 1.0F / var2;
