@@ -1,6 +1,5 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
@@ -8,6 +7,7 @@ import java.util.Set;
 import net.minecraft.core.Holder;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.registries.Registries;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.entity.Entity;
 import net.minecraft.world.entity.LivingEntity;
 import net.minecraft.world.item.enchantment.Enchantment;
@@ -15,7 +15,6 @@ import net.minecraft.world.item.enchantment.EnchantmentHelper;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.item.enchantment.LevelBasedValue;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public record LootItemRandomChanceWithEnchantedBonusCondition(float unenchantedChance, LevelBasedValue enchantedChance, Holder<Enchantment> enchantment) implements LootItemCondition {
@@ -34,12 +33,12 @@ public record LootItemRandomChanceWithEnchantedBonusCondition(float unenchantedC
       return LootItemConditions.RANDOM_CHANCE_WITH_ENCHANTED_BONUS;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.ATTACKING_ENTITY);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.ATTACKING_ENTITY);
    }
 
    public boolean test(LootContext var1) {
-      Entity var2 = (Entity)var1.getParamOrNull(LootContextParams.ATTACKING_ENTITY);
+      Entity var2 = (Entity)var1.getOptionalParameter(LootContextParams.ATTACKING_ENTITY);
       int var10000;
       if (var2 instanceof LivingEntity var4) {
          var10000 = EnchantmentHelper.getEnchantmentLevel(this.enchantment, var4);
