@@ -1,14 +1,13 @@
 package net.minecraft.world.level.storage.loot.predicates;
 
-import com.google.common.collect.ImmutableSet;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import java.util.Optional;
 import java.util.Set;
 import net.minecraft.advancements.critereon.ItemPredicate;
+import net.minecraft.util.context.ContextKey;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.LootContext;
-import net.minecraft.world.level.storage.loot.parameters.LootContextParam;
 import net.minecraft.world.level.storage.loot.parameters.LootContextParams;
 
 public record MatchTool(Optional<ItemPredicate> predicate) implements LootItemCondition {
@@ -25,12 +24,12 @@ public record MatchTool(Optional<ItemPredicate> predicate) implements LootItemCo
       return LootItemConditions.MATCH_TOOL;
    }
 
-   public Set<LootContextParam<?>> getReferencedContextParams() {
-      return ImmutableSet.of(LootContextParams.TOOL);
+   public Set<ContextKey<?>> getReferencedContextParams() {
+      return Set.of(LootContextParams.TOOL);
    }
 
    public boolean test(LootContext var1) {
-      ItemStack var2 = (ItemStack)var1.getParamOrNull(LootContextParams.TOOL);
+      ItemStack var2 = (ItemStack)var1.getOptionalParameter(LootContextParams.TOOL);
       return var2 != null && (this.predicate.isEmpty() || ((ItemPredicate)this.predicate.get()).test(var2));
    }
 
